fixed - suppliers items alignment

--- a/src/components/suppliers/suppliers.styl
+++ b/src/components/suppliers/suppliers.styl
@@ -5,6 +5,10 @@
     background #fff
     padding 6rem 0
 
+  &__item,
+  &__item-wrapper
+    display flex
+
   &__item
     border-left 1px solid #777
 
@@ -13,10 +17,7 @@
 
   &__item-wrapper
     padding 2rem
-    margin 0 auto
     width 100%
-    display flex
-    align-items center
 
   &__figure,
   &__image
